# book-obsidian-sync

./: .gitignore  README.md  docker-compose.yml  pnpm-lock.yaml
apps/api/: .env.example  pyproject.toml
apps/api/app/: config.py  main.py
apps/api/app/domain/: pipeline.py
apps/api/app/routers/: __init__.py  diagnostics.py  ingest.py
apps/api/app/services/: orchestrator.py  pipeline_runner.py
apps/api/app/state/: job_store.py
apps/api/app/utils/: logger.py  slugify.py
apps/web/: index.html  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx
apps/web/src/components/: IngestPanel.tsx  PipelineStatus.tsx  TagGuidance.tsx  TagSelector.tsx
apps/web/src/lib/: api.ts
apps/web/src/pages/: Dashboard.tsx  Diagnostics.tsx
db/migrations/: README.md
docker/: api.Dockerfile  web.Dockerfile  worker.Dockerfile
scripts/: bootstrap.ps1
services/db/: session.py
services/llm/: ollama_client.py  prompter.py
services/transcription/: whisper.py
shared/config/: prompts.yaml
vault/.obsidian/: workspace.json
vault/book-of-mormon-02/artifacts/: chunks.json  metadata.json  quotes.md  summary.md
vault/book-of-mormon-02/artifacts/chunks/: 34406_eng-chunk-000.txt  34406_eng-chunk-002.txt  34406_eng-chunk-005.txt  34406_eng-chunk-006.txt  34406_eng-chunk-007.txt  34406_eng-chunk-008.txt  34406_eng-chunk-009.txt  34406_eng-chunk-010.txt  34406_eng-chunk-012.txt  (+495 more)
vault/book-of-mormon/artifacts/: quotes.md  summary.md
workers/: pyproject.toml  worker.py
workers/tasks/: ingest.py
(+488 files in other folders)
