[tool.poetry]
name = "converter-api"
version = "0.1.0"
description = "FastAPI backend for the converter pipeline"
authors = ["Glued Research Ops <ops@example.com>"]
packages = [
  { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
SQLAlchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
celery = "^5.4.0"
redis = "^5.0.4"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
structlog = "^24.1.0"
"pdfminer.six" = "^20231228"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"
click = "^8.1.7"
requests = "^2.31.0"
# transcription + ai deps placeholder; pinned when pipeline implemented

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

